[package]
name = "arangors-mre"
version = "0.1.0"
authors = ["Daniel Wiesenberg <weasy@hotmail.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/Weasy666/Rocket/", branch = "debug-printlns", default-features = false }
rocket_contrib = { git = "https://github.com/Weasy666/Rocket/", branch = "debug-printlns", default-features = false, features = ["arango_pool"] }
dotenv = "0.15.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
